<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:menu="@menu/detail_user_top_app_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topappbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurfaceVariant"
            app:title="@string/user_detail_toolbar_title"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:menu="@menu/detail_user_top_app_bar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_detail"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/TextContent.Heading.Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/name_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
        app:layout_constraintTop_toTopOf="@+id/img_detail_photo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_detail_username"
        style="@style/TextContent.Subheading.Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_photo"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_location_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/img_company_icon"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        app:srcCompat="@drawable/ic_location_24"
        app:tint="?attr/colorOnBackground"
        style="@style/ImageIcon"/>

    <TextView
        style="@style/TextContent.Body.Detail"
        android:id="@+id/tv_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/location_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/img_location_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_location_icon"
        app:layout_constraintTop_toTopOf="@+id/img_location_icon" />

    <ImageView
        android:id="@+id/img_company_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_photo"
        app:layout_constraintEnd_toEndOf="@+id/img_location_icon"
        app:layout_constraintStart_toStartOf="@+id/img_location_icon"
        app:layout_constraintTop_toBottomOf="@+id/img_location_icon"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_work_24"
        app:tint="?attr/colorOnBackground"
        style="@style/ImageIcon"/>

    <TextView
        android:id="@+id/tv_detail_company"
        style="@style/TextContent.Body.Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="1"
        android:text="@string/company_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/img_company_icon"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_company_icon"
        app:layout_constraintTop_toTopOf="@+id/img_company_icon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_repository"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_user_metric"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/cl_detail_followers"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_photo">

        <TextView
            android:id="@+id/tv_detail_repository"
            style="@style/TextContent.Body.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/tv_repository"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextContent.Subheading.Detail"
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_repository" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_followers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_user_metric"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cl_detail_repository"
        app:layout_constraintEnd_toStartOf="@+id/cl_detail_following"
        app:layout_constraintStart_toEndOf="@+id/cl_detail_repository"
        app:layout_constraintTop_toTopOf="@+id/cl_detail_repository">

        <TextView
            android:id="@+id/tv_detail_followers"
            style="@style/TextContent.Body.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/tv_followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_followers"
            style="@style/TextContent.Subheading.Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_following"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_user_metric"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cl_detail_followers"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toEndOf="@+id/cl_detail_followers"
        app:layout_constraintTop_toTopOf="@+id/cl_detail_repository"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_detail_following"
            style="@style/TextContent.Body.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/tv_following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/TextContent.Subheading.Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_following" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_detail_followers"
        app:layout_constraintVertical_bias="0.0"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="395dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="278dp" />

</androidx.constraintlayout.widget.ConstraintLayout>